vlib/v/checker/tests/eq_ne_op_wrong_type_err.out
vlib/v/checker/tests/eq_ne_op_wrong_type_err.vv:10:10: error: infix expr: cannot use `int literal` (right expression) as `Aaa`
    8 | 
    9 | fn main() {
   10 |     println(Aaa{} == 10)
      |             ~~~~~~~~~~~
   11 |     println(10 == Aaa{})
   12 |     println(Aaa{} != 10)
vlib/v/checker/tests/eq_ne_op_wrong_type_err.vv:11:10: error: infix expr: cannot use `Aaa` (right expression) as `int literal`
    9 | fn main() {
   10 |     println(Aaa{} == 10)
   11 |     println(10 == Aaa{})
      |             ~~~~~~~~~~~
   12 |     println(Aaa{} != 10)
   13 |     println(10 != Aaa{})
vlib/v/checker/tests/eq_ne_op_wrong_type_err.vv:12:10: error: infix expr: cannot use `int literal` (right expression) as `Aaa`
   10 |     println(Aaa{} == 10)
   11 |     println(10 == Aaa{})
   12 |     println(Aaa{} != 10)
      |             ~~~~~~~~~~~
   13 |     println(10 != Aaa{})
   14 |
vlib/v/checker/tests/eq_ne_op_wrong_type_err.vv:13:10: error: infix expr: cannot use `Aaa` (right expression) as `int literal`
   11 |     println(10 == Aaa{})
   12 |     println(Aaa{} != 10)
   13 |     println(10 != Aaa{})
      |             ~~~~~~~~~~~
   14 | 
   15 |     println(Aaa{0} == AAaa{0})
vlib/v/checker/tests/eq_ne_op_wrong_type_err.vv:15:10: error: possible type mismatch of compared values of `==` operation
   13 |     println(10 != Aaa{})
   14 | 
   15 |     println(Aaa{0} == AAaa{0})
      |             ~~~~~~~~~~~~~~~~~
   16 |     println(AAaa{0} == Aaa{0})
   17 |     println(AAaa{1} != Aaa{1})
vlib/v/checker/tests/eq_ne_op_wrong_type_err.vv:16:10: error: possible type mismatch of compared values of `==` operation
   14 | 
   15 |     println(Aaa{0} == AAaa{0})
   16 |     println(AAaa{0} == Aaa{0})
      |             ~~~~~~~~~~~~~~~~~
   17 |     println(AAaa{1} != Aaa{1})
   18 |     println(Aaa{1} != AAaa{1})
vlib/v/checker/tests/eq_ne_op_wrong_type_err.vv:17:10: error: possible type mismatch of compared values of `!=` operation
   15 |     println(Aaa{0} == AAaa{0})
   16 |     println(AAaa{0} == Aaa{0})
   17 |     println(AAaa{1} != Aaa{1})
      |             ~~~~~~~~~~~~~~~~~
   18 |     println(Aaa{1} != AAaa{1})
   19 |
vlib/v/checker/tests/eq_ne_op_wrong_type_err.vv:18:10: error: possible type mismatch of compared values of `!=` operation
   16 |     println(AAaa{0} == Aaa{0})
   17 |     println(AAaa{1} != Aaa{1})
   18 |     println(Aaa{1} != AAaa{1})
      |             ~~~~~~~~~~~~~~~~~
   19 | 
   20 |     arr := Arr([0])
vlib/v/checker/tests/eq_ne_op_wrong_type_err.vv:21:10: error: possible type mismatch of compared values of `==` operation
   19 | 
   20 |     arr := Arr([0])
   21 |     println(arr == [0])
      |             ~~~~~~~~~~
   22 |     println([1] == arr)
   23 |     println(arr != [0])
vlib/v/checker/tests/eq_ne_op_wrong_type_err.vv:22:10: error: possible type mismatch of compared values of `==` operation
   20 |     arr := Arr([0])
   21 |     println(arr == [0])
   22 |     println([1] == arr)
      |             ~~~~~~~~~~
   23 |     println(arr != [0])
   24 |     println([1] != arr)
vlib/v/checker/tests/eq_ne_op_wrong_type_err.vv:23:10: error: possible type mismatch of compared values of `!=` operation
   21 |     println(arr == [0])
   22 |     println([1] == arr)
   23 |     println(arr != [0])
      |             ~~~~~~~~~~
   24 |     println([1] != arr)
   25 | }
vlib/v/checker/tests/eq_ne_op_wrong_type_err.vv:24:10: error: possible type mismatch of compared values of `!=` operation
   22 |     println([1] == arr)
   23 |     println(arr != [0])
   24 |     println([1] != arr)
      |             ~~~~~~~~~~
   25 | }

